--- a/common/demos/CMakeLists.txt
+++ b/common/demos/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(maze maze.c)
 add_executable(quicksort quicksort.c)
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
+add_executable(vulnerabilities vulnerabilities.c)
